grid gif system & refactoring js

--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
 		<title>Gifeed 🙊</title>
 	</head>
 	<body>
-		<div class="top">
-			<h1 class="title">Gifeed 🙊</h1>
-			<a class="search-clear">
+		<div class="top grid">
+			<h1 class="title full-area">Gifeed 🙊</h1>
+			<a class="search-clear full-area">
 				<img src="./assets/svg/close.svg">
 			</a>
 		</div>
 
-		<div class="middle">
-			<input class="search-input" placeholder="Ecrivez quelque chose">
-			<div class="videos"></div>
+		<div class="middle grid">
+			<input class="search-input full-area" placeholder="Ecrivez quelque chose">
+			<div class="videos grid full-area"></div>
 		</div>
 
-		<div class="indicators">
-			<img class="spinner" src="./assets/svg/oval.svg">
-			<span class="search-hint">Entrer pour rechercher</span>
+		<div class="indicators grid">
+			<img class="spinner full-area" src="./assets/svg/oval.svg">
+			<span class="search-hint full-area">💡 Recherche de gif
+			</span>
 		</div>
 
 		<script src="./js/gifeed.js"></script>
